Omnifood - Fixing color contrast ratio of links

--- a/starter/07-Omnifood-Desktop/css/general.css
+++ b/starter/07-Omnifood-Desktop/css/general.css
@@ -230,7 +230,7 @@ body {
 
 .link:link,
 .link:visited {
-    color: #e67e22;
+    color: #b1601a;
     text-decoration: none;
     border-bottom: 1px solid currentColor;
     padding-bottom: 2px;
@@ -239,7 +239,7 @@ body {
 
 .link:hover,
 .link:active {
-    color: #cf711f;
+    color: #864914;
     border-bottom: 1px solid transparent;
 }
 
